Bug 7062 - uprobes loading does not respect SYSTEMTAP_RUNTIME environment variable
Summary: uprobes loading does not respect SYSTEMTAP_RUNTIME environment variable
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: translator (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on: 5163
Blocks: 6925
  Show dependency treegraph
 
Reported: 2008-12-03 22:51 UTC by Roland McGrath
Modified: 2008-12-29 19:20 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roland McGrath 2008-12-03 22:51:10 UTC
buildrun.cxx should use s.runtime_path + "/uprobes" rather than a hard-coded path.
Comment 1 Frank Ch. Eigler 2008-12-07 15:17:07 UTC
merged
Comment 2 Roland McGrath 2008-12-07 22:30:00 UTC
Merged what?  I don't see any commit marked for PR7062, and no change to this code.
Comment 3 Frank Ch. Eigler 2008-12-08 18:07:14 UTC
Translator-side code is in, but runtime-side code can't be quite a simple,
since we must not permit unprivileged users to load any old module via an
environment variable setting.  So bug #5163 may need to be worked on with
this issue in mind to cover all cases.
Comment 4 Roland McGrath 2008-12-08 20:08:44 UTC
It might be sufficient just to have staprun clear SYSTEMTAP_RUNTIME when setuid
as it deos for SYSTEMTAP_STAPRUN.
Comment 5 Frank Ch. Eigler 2008-12-09 14:09:04 UTC
commit 73dc0c7 does the setuid-sensitive unsetenv suggested above.
Comment 6 Frank Ch. Eigler 2008-12-29 19:20:51 UTC
committed