PR7062: base uprobes tree on s.runtime_path instead of PKGDATADIR